Fixes for tooltip width/overlapping

--- a/apps/ccf-rui/src/app/shared/components/rotation-slider/slider-box/slider-box.component.scss
+++ b/apps/ccf-rui/src/app/shared/components/rotation-slider/slider-box/slider-box.component.scss
@@ -56,3 +56,7 @@
     }
   }
 }
+
+::ng-deep .rotation-slider-tooltip {
+  max-width: 12.25rem;
+}
