--- a/apps/ccf-rui/src/app/shared/components/slices-input/slices-input.component.scss
+++ b/apps/ccf-rui/src/app/shared/components/slices-input/slices-input.component.scss
@@ -44,3 +44,7 @@
     }
   }
 }
+
+::ng-deep .tissue-section-tooltip {
+  max-width: 8.25rem;
+}
